<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jtrofe200.myapplication.onlineObjects.OnlineActivity">


    <Button
        android:id="@+id/btn_profile"
        android:tag="profile"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_lbl_online_profile" />

    <Button
        android:id="@+id/btn_new"
        android:tag="new"
        android:layout_below="@+id/btn_profile"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_lbl_online_new" />

    <Button
        android:id="@+id/btn_dive"
        android:tag="dive"
        android:layout_below="@+id/btn_new"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_lbl_online_dive" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_below="@+id/btn_dive"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_lbl_online_gallery" />

    <Button
        android:id="@+id/btn_log_out"
        android:tag="logOut"
        android:layout_below="@+id/btn_gallery"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_lbl_online_log_out" />

</RelativeLayout>
