<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!-- Hidden progress spinner -->
    <ProgressBar
        android:id="@+id/progress_spinner"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <!-- Clickable title -->
    <TextView
        android:id="@+id/txt_log_in"
        style="@style/DialogExpandableTitle"
        android:text="@string/txt_dialog_log_in"/>
    <!-- Expandable content -->
    <EditText
        android:id="@+id/edit_text_name"
        style="@style/DialogUserName" />
    <EditText
        android:id="@+id/edit_text_pass"
        style="@style/DialogPassword"/>
    <Button
        android:id="@+id/btn_log_in"
        android:text="@string/btn_lbl_dialog_submit"
        style="@style/DialogButton"/>

    <!-- Clickable title -->
    <TextView
        android:id="@+id/txt_sign_up"
        style="@style/DialogExpandableTitle"
        android:text="@string/txt_dialog_sign_up" />
    <!-- Expandable content -->
    <EditText
        android:id="@+id/edit_text_name_2"
        style="@style/DialogUserName"
        android:visibility="gone" />
    <EditText
        android:id="@+id/edit_text_pass_2"
        style="@style/DialogPassword"
        android:visibility="gone" />
    <EditText
        android:id="@+id/edit_text_pass_verify"
        android:hint="@string/hint_dialog_pass_verify"
        style="@style/DialogPassword"
        android:visibility="gone" />
    <Button
        android:id="@+id/btn_sign_up"
        android:text="@string/btn_lbl_dialog_submit"
        style="@style/DialogButton"
        android:visibility="gone"/>

</LinearLayout>